feat: 配置 stylelint

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "prepare": "husky init",
+    "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "prepare": "husky",
     "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
-    "clean:lib": "rimraf node_modules"
+    "clean:lib": "rimraf node_modules",
+    "commit": "cz"
   },
   "dependencies": {
     "pinia": "^2.2.6",
@@ -39,7 +41,16 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.11",
     "npm-run-all2": "^7.0.1",
+    "postcss": "^8.4.49",
+    "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
+    "stylelint": "^16.12.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-order": "^6.0.4",
     "typescript": "~5.6.3",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
@@ -49,7 +60,8 @@
   "lint-staged": {
     "*.{vue,js,ts}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "stylelint --fix"
     ],
     "package.json": [
       "prettier --write"
