--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss": "^8.4.49",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.83.0",
     "stylelint": "^16.12.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recommended-scss": "^14.1.0",
