--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "demo-admin",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://zq0726.github.io/demo-admin/",
   "type": "module",
+  "license": "MIT",
+  "author": {
+    "name": "庆",
+    "email": "805322803@qq.com",
+    "url": "https://zq0726.github.io"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -34,6 +41,7 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
@@ -44,6 +52,7 @@
     "postcss": "^8.4.49",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
+    "sass": "^1.83.0",
     "sass-embedded": "^1.83.0",
     "stylelint": "^16.12.0",
     "stylelint-config-html": "^1.1.0",
@@ -53,6 +62,7 @@
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-order": "^6.0.4",
     "typescript": "~5.6.3",
+    "unocss": "^0.65.2",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
     "vitest": "^2.1.5",
