--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.20",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
@@ -64,6 +63,7 @@
     "typescript": "~5.6.3",
     "unocss": "^0.65.2",
     "vite": "^6.0.1",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-vue-devtools": "^7.6.5",
     "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
