--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "commit": "cz"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "mockjs": "^1.1.0",
     "pinia": "^2.2.6",
+    "vite-plugin-mock": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
