--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "element-plus": "^2.9.1",
     "mockjs": "^1.1.0",
     "pinia": "^2.2.6",
     "vite-plugin-mock": "^3.0.2",
