--- a/package.json
+++ b/package.json
@@ -26,17 +26,25 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^12.2.0",
     "axios": "^1.7.9",
     "element-plus": "^2.9.1",
+    "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "pinia": "^2.2.6",
     "vite-plugin-mock": "^3.0.2",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1",
+    "vue-qr": "^4.0.9",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsdom": "^21.1.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
@@ -66,6 +74,8 @@
     "stylelint-order": "^6.0.4",
     "typescript": "~5.6.3",
     "unocss": "^0.65.2",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
     "vitest": "^2.1.5",
